--- a/index.html
+++ b/index.html
@@ -2,5 +2,14 @@
 <html>
   <head>
     <link rel="stylesheet"href="./style.css"type="text/css">
+    <title>home page</title>
   </head>
+  <header>
+    <nav>
+      <ul>
+        <a href="./index.html"><li>home</li></a>
+        <a href="./aboutme.html"><li>about me</li></a>
+      </ul>
+    </nav>
+    </header>
 </html>
